--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_screenutil:
   html_unescape:
   auto_size_text:
+  double_back_to_close_app:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +41,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons:
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"
+  image_path_ios: "assets/icons/icon.png"
+  adaptive_icon_background: "assets/icons/icon_bg.png"
+  adaptive_icon_foreground: "assets/icons/icon_fg.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,6 +68,7 @@ flutter:
      - assets/
      - assets/icons/
      - assets/json/
+     - assets/gifs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
